🐛 (mon-pix): fix contrast color

--- a/mon-pix/app/styles/components/_certification-starter.scss
+++ b/mon-pix/app/styles/components/_certification-starter.scss
@@ -93,7 +93,7 @@
 
       &__non-eligible-item,
       &__non-eligible-icon {
-        color: var(--pix-neutral-100);
+        color: var(--pix-neutral-500);
       }
     }
 
